# DTIProcessToolkit

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  Common.cmake  DTIProcess.cmake  DTIProcessExtension.cxx  DTIProcessExtension.xml  ImportDTIProcessExtensionExecutables.cmake.in  LinearTensorGeometry.h  MetricSpace.h  README.md  README.txt  SuperBuild.cmake  SymmetricSpaceTensorGeometry.txx  TensorStatistics.h  TensorStatistics.txx  dtiaverage.cxx  dtiestim.cxx  dtiprocess.cxx  fiberprocess.cxx  itkDeformationFieldFromTransform.h  itkDeformationFieldFromTransform.txx  itkDeformationFieldJacobianFilter.h  itkDeformationFieldJacobianFilter.txx  itkDiffusionTensor3DReconstructionNonlinearImageFilter.h  itkDiffusionTensor3DReconstructionNonlinearImageFilter.txx  itkDiffusionTensor3DReconstructionRicianImageFilter.h  itkDiffusionTensor3DReconstructionRicianImageFilter.txx  itkDiffusionTensor3DReconstructionWeightedImageFilter.h  itkDiffusionTensor3DReconstructionWeightedImageFilter.txx  itkExpEuclideanTensorImageFilter.h  itkExpEuclideanTensorImageFilter.txx  itkHFieldToDeformationFieldImageFilter.h  itkHFieldToDeformationFieldImageFilter.txx  itkLinearInterpolateTensorImageFunction.h  itkLinearInterpolateTensorImageFunction.txx  itkLogEuclideanTensorImageFilter.h  itkNaryTensorAverageImageFilter.h  itkNaryVectorAverageImageFilter.h  itkProjectTensorImageFilter.h  (+29 more)
Applications/: CMakeLists.txt  dtiaverage.cxx  dtiaverage.xml  dtiestim.cxx  dtiestim.xml  dtimodelcheck.cxx  dtipgaaverage.cxx  dtiprocess.cxx  dtiprocess.xml  dwiprocess.cxx  fiberimagematch.cxx  fiberprocess.cxx  fiberprocess.xml  fiberstats.cxx  fiberstats.xml  fibertrack.cxx  fibertrack.xml  hfieldtodeformation.cxx  labeltable.cxx  maxcurvature.cxx  maxcurvature.xml  morph.cxx  nrrdvtk.cxx  roiprocess.cxx  scalartransform.cxx  scalartransform.xml  tensorfeature.cxx  tio.cxx
Applications/dwiAtlas/: CMakeLists.txt  DWIOperation.cxx  DWIOperation.xml  README  SphericalHarmonicsInterpolationFilter.h  SphericalHarmonicsInterpolationFilter.txx  auxFunctions.h  auxFunctions.txx  dwiAtlas.cxx  itkDWIAtlasBuilder.h  itkDWIAtlasBuilder.txx  itkExtractVolumeFilter.h  itkExtractVolumeFilter.txx  itkMaskedMeanImageFilter.h  itkMaskedMeanImageFilter.txx  itkRicianNoiseLevelDeterminer.h  itkRicianNoiseLevelDeterminer.txx  sphericalHarmonicsFunctions.h  sphericalHarmonicsFunctions.txx  testEmoryMonkeyDWIAtlasAllBiasCorrected.cf  testRicianNoiseLevelEstimator.cxx
CMake/: DTIProcessConfig.cmake.in  SlicerExtensionsConfigureMacros.cmake
Data/dtiestim/Baseline/: b0.nrrd
Data/dtiprocess/Baseline/: RD.nrrd
PrivateLibrary/: CMakeLists.txt  FiberCalculator.cxx  FiberCalculator.h  LinearTensorGeometry.h  MetricSpace.h  SymmetricSpaceTensorGeometry.h  SymmetricSpaceTensorGeometry.txx  TensorGeometry.h  TensorStatistics.h  TensorStatistics.txx  deformationfieldio.cxx  deformationfieldoperations.cxx  deformationfieldoperations.h  dtitypes.h  fiberio.cxx  fiberio.h  fiberoperations.h  imageio.h  imageio.txx  itkVectorImageTraits.h  pomacros.h  tensordeformation.cxx  tensordeformation.h  tensorderivs.h  tensorio.cxx  tensorio.h  tensorscalars.cxx  tensorscalars.h  transforms.h  transforms.txx  wrapper.cxx  wrapper.h
SuperBuild/: External_BRAINSTools.cmake  External_BatchMake.cmake  External_Boost.cmake  External_DCMTK.cmake  External_DTIProcess.cmake  External_DTIReg.cmake  External_DTI_Tract_Stat.cmake  External_FFTW.cmake  External_ITK.cmake  External_ITKv4.cmake  External_JPEG.cmake  External_KWStyle.cmake  External_QWT.cmake  External_ReferenceAtlas.cmake  External_SlicerExecutionModel.cmake  External_TIFF.cmake  External_Uncrustify.cmake  External_VTK.cmake  External_niral_utilities.cmake  External_zlib.cmake  nightly.sh
Testing/: BesselTest.cxx  CMakeLists.txt  FiberIOTest.cxx  ImageCompareTest.cxx  PrincipalEigenvectorFunctionTest.cxx  ReadITKAffineTest.cxx  ScalarDeformationApplyTest.cxx  TensorEstimateTest.cxx  TestHomemadeRoundFunction.cxx  TestSuite.cxx  WarpFiberTest.cxx  WarpTensorTest.cxx  itkDifferenceDiffusionTensor3DImageFilter.h  itkDifferenceDiffusionTensor3DImageFilter.txx  itkDifferenceImageFilter.h  itkTestMainExtended.h  localTestMain.h  svn-commit.2.tmp  svn-commit.tmp
Testing/Data/: cfa.nrrd  fa.nrrd  l1.nrrd  l2.nrrd  syntheticdti.nhdr  syntheticdti.raw
bessel/: CMakeLists.txt  xzabs.f  zairy.f  zasyi.f  zbknu.f  zkscl.f  zlog.f  zmlri.f  zs1s2.f  zseri.f  zsqrt.f  zunhj.f  zunik.f  zuoik.f
cephes/: CMakeLists.txt  cephes.h  i0.c
dtiprocess/: CMakeLists.txt
dtiprocess/Applications/: CMakeLists.txt  dtiaverage.cxx  dtiaverage.xml  dtiestim.cxx  dtiprocess.xml  fiberprocess.cxx  fiberprocess.xml  fiberstats.cxx  fiberstats.xml  fibertrack.cxx  fibertrack.xml  labeltable.cxx  maxcurvature.cxx  maxcurvature.xml  morph.cxx
dtiprocess/Applications/dwiAtlas/: CMakeLists.txt  DWIOperation.cxx  auxFunctions.txx  dwiAtlas.cxx  dwiAtlas.xml  gradientsICO92.txt  itkDWIAtlasBuilder.txx  itkExtractVolumeFilter.txx  itkRicianNoiseLevelDeterminer.txx  sphericalHarmonicsFunctions.txx  testRicianNoiseLevelEstimator.cxx
dtiprocess/Data/dtiprocess/Baseline/: AD.nrrd  FA.nrrd  MD.nrrd  RD.nrrd
dtiprocess/PrivateLibrary/: CMakeLists.txt  FiberCalculator.cxx  MetricSpace.h  TensorStatistics.txx  fiberio.cxx  tensordeformation.cxx  tensorio.cxx  tensorio.h  tensoroperations.h  tensorscalars.cxx  tensorscalars.h  transforms.txx
dtiprocess/Testing/: BesselTest.cxx  CMakeLists.txt  PrincipalEigenvectorFunctionTest.cxx  TestSuite.cxx  WarpTensorTest.cxx  localTestMain.h
dtiprocess/Testing/Data/: cfa.nrrd  itkAffineTransformDouble.txt  itkAffineTransformFloat.txt  l3.nrrd  md.nrrd  test.dof  testfa.nrrd
dtiprocess/cephes/: CMakeLists.txt  cephes.h
